# wstool

./: .SRCINFO  .gitignore  Makefile  PKGBUILD  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
doc/: conf.py
src/wstool/: multiproject_cli.py
test/local/: test_config_yaml.py  test_diff_functions_git.py  test_export.py
wastebasket/: setup.py
