[tool.poetry]
name = "wstool"
version = "0.2.0"
description = ""
authors = ["Michael Mugnai <michael.mugnai@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
vcstools = "~=0.1.42"
PyYAML = "~=6.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
